public/css/style.scss
/* ... */
.nav-fixed {

	position: fixed;
	top: 0;
	height:15vh;

}

nav {

	float:left;
	width:60%;

	li {

		position: relative;
		float:left;
		margin-right: 42px;
		text-transform: uppercase;
		color:$dark;
		font-size: .95rem;
		font-weight: normal;
		@include transition(transform .3s);
		
		&:before {

			top:100%;
			position: absolute;
			content: attr(data-hover);
			text-transform: uppercase;
			color:$dark;
			font-size: .95rem;
			@include transition(transform .3s);

			@include breakpoint(large) {

				font-size: .9rem;

			}

			@include breakpoint(medium) {

				display: none;

			}

		}

		&:hover {

			@include transform(translate(0, -100%));

			&:before {

				@include transform(translate(0, 0));

			}

		}


		@include breakpoint(large) {

			font-size: .9rem;

		}

		@include breakpoint(medium) {

			float:none;
			font-size: 1.4rem;
			margin-bottom: 10px;
			white-space: nowrap;

		}
	
	}

	li.lighter {

		color:lighten($dark, 35%);

		&:before {

			color:lighten($dark, 35%);

		}

	}

	li.darken-at-contact {

		color:$dark;

	}

	li.contact-lighter {

		color:lighten($dark, 35%);

	}

	ul {

		overflow: hidden;

	}

	@include breakpoint(tablet) {

		width:80%;
			
	}

	@include breakpoint(medium) {

		float:none;
		margin-top: 40px;
		width:auto;

	}

} 

.content {

	width:100%;
	position: relative;	
	background-color: white;
	z-index: 5;

	.container {

		@include box-sizing(border-box);
		padding: 15% 0;
		padding: 15vh 0;

	}

}

.column-left {

	position: relative;
	width:50%;
	float:left;

	@include breakpoint(medium) {

		width:100%;
		float:none;

	}

}

.column-right {

	position: relative;
	width:50%;
	float:right;

	@include breakpoint(medium) {

		width:100%;
		float:none;

	}

}

.machine-list-container {

	position: relative;
	width:80%;
	float:right;

	@include breakpoint(medium) {

		width:100%;
		float:none;
		@include box-sizing(border-box);
		padding:0 15px;

	}


}

.machine-module {

	width:100%;
	text-transform: uppercase;
	font-size: .9rem;
	line-height: 1.4rem;
	margin-bottom: 50px;

	@include breakpoint(medium) {

		font-size: .7rem;

	}

}

.machine-title {

	text-transform: uppercase;
	font-size: 1.2rem;
	margin-bottom: 5px;

}

.machine-list-table {

	width:100%;

	td {

		vertical-align:top;

		@include breakpoint(tablet) {

			font-size: .7rem;

		}

	}

}


.photo-container {

	width:100%;
	width:100vw;
	height:100%;
	height:100vh;
	position: relative;
	overflow: hidden;
	background-color: $dark;
	z-index: 5;

	.container {

		height:100%;

	}

}

.photo {

	width:110%;
	height:110%;
	background-size: cover;
	background-position: top;	
	@include centerHorizontal;

	&.first-photo {

		background-position: bottom;

	}

	&.photo-center {

		background-position: center;

	}

	&.photo-bottom {

		background-position: bottom;

	}

	@include breakpoint(medium) {

		// display: none;

	}

}

.mobile-photo {

	width:100%;
	height:100%;
	background-size: cover;
	background-position: center;

	@include stretchpoint(medium) {

		display: none;

	}

}

.photo-static {

	@extend .photo;

}

.photo-caption-mobile {

	@include stretchpoint(medium) {

		display: none;

	}

}

.photo-caption-fixed {

	bottom: 8%;
	bottom: 8vh;

	&.first-caption {

		bottom:8%;
		bottom: 8vh;

	}	

}

.photo-caption-animated {

	@include breakpoint(medium) {

		display: none;

	}

}

.photo-caption {

	position: absolute;
	left: 10%;
	font-family: $gotham;
	color:white;
	width:30%;
	z-index: 7;


	&.first-story-caption {
		
	}

	&.first-caption {

		bottom:25%;
		bottom: 25vh;

		@include breakpoint(medium) {

			bottom:8%;
			bottom: 8vh;

		}

	}	

	&.darker {

		color: black;

	}

	@include breakpoint(tablet) {

		left:5%;
		width:45%;

	}

	@include breakpoint(medium) {

		width:100%;
		left:0%;
		@include box-sizing(border-box);
		padding: 0 5%;


	}

}

.photo-caption-title {

	text-transform: uppercase;
	font-weight: bold;
	font-size: 2rem;
	margin-bottom: 10px;
	line-height: 2rem;

	@include breakpoint(medium) {

		font-size: 1.7rem;

	}

}

.photo-caption-description {

	font-size: 1rem;
	font-weight: 600;

}

.machine-photo-info-container {

	@extend .photo-caption;
	bottom: 8%;
	bottom:8vh;
	width:40%;

	@include breakpoint(large) {

		width:50%;

	}

	@include breakpoint(medium) {

		width:100%;

	}

}

.machine-photo-diagram {

	height:12%;
	height:12vh;
	float:left;

	@include breakpoint(medium) {

		height:10%;
		height:10vh;

	}

}

.machine-photo-text-container {

	width:70%;
	float:left;
	margin-left: 20px;

	@include breakpoint(medium) {

		width:100%;
		margin-left: 0;

	}

}

.machine-photo-title {

	@extend .photo-caption-title;
	margin-bottom: 3px;
	margin-top: 7px;



}

.machine-photo-description {

	text-transform: uppercase;
	font-weight: bold;

}



.contact {

	position: relative;
	height:100%;
	height:100vh;
	width:100%;
	width:100vw;
	background-color: #e7e9ea;

	.container {

		position: relative;

	}

	@include breakpoint(medium) {

		height:auto;

	}

}

.contact-fixed-container {

	position: fixed;
	height:100%;
	height:100vh;
	width:100%;
	width:100vw;
	top:0;

	& > .team-outer-container {

		@include center;
		top:48%;

		@include breakpoint(tablet) {

			width:100%;

		}

		@include breakpoint(medium) {

			@include uncenter;

		}

	}

	& > .contact-info-outer-container {

		margin-top: 15vh;

		@include breakpoint(medium) {

			margin-top: 0;
			@include box-sizing(border-box);
			padding-top:40px;
			padding-bottom: 40px;

		}

	}

	@include breakpoint(medium) {

		position: static;
		height:auto;

	}

}
/* ... */

